[package]
name = "inchi"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "InChI parser"
repository = "https://github.com/oovm/inchi"
documentation = "https://docs.rs/inchi"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
